1.18.2 - 0.0.27 - Minor fixes, paper should run
Known issue:
- Current implementation in the chunkgenerator using checkForVanillaStructure is potentially slow, and also does not check for datapack structures.